--- a/FIT5032_Assignment/Views/Appointments/UserAppointments.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/UserAppointments.cshtml
@@ -8,7 +8,7 @@
 <h2>My Appointments</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Book New Appointment", "Create")
 </p>
 <table class="table">
     <thead>
@@ -33,6 +33,9 @@
 
                 <td>
                     @Html.ActionLink("Details", "UserAppointmentDetails", new { id = appointment.AppointmentId }) |
+                </td>
+                <td>
+                <td>@Html.ActionLink("View Feedback", "Details", "FeedbackAndRatings", new { id = appointment.AppointmentId }, null)</td>
                 </td>
             </tr>
         }
