--- a/FIT5032_Assignment/Views/FeedbackAndRatings/Details.cshtml
+++ b/FIT5032_Assignment/Views/FeedbackAndRatings/Details.cshtml
@@ -38,6 +38,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.AppointmentId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "UserAppointments", "Appointments")
 </p>
