--- a/FIT5032_Assignment/Views/Clinics/Index.cshtml
+++ b/FIT5032_Assignment/Views/Clinics/Index.cshtml
@@ -1,40 +1,54 @@
-﻿@model IEnumerable<FIT5032_Assignment.Models.Entites.Clinic>
+﻿@model FIT5032_Assignment.Models.Entites.Clinic
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div>
+    <h1>@Model.ClinicName</h1>
+    <p>Address: @Model.Address</p>
+</div>
+<hr>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ClinicName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th></th>
-    </tr>
+    <thead>
+        <tr>
+            <th>Appointment Date</th>
+            <th>Start Time</th>
+            <th>Title</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Phone Number</th>
+            <th>Email</th>
+            <th>Gender</th>
+            <th>Birthday</th>
+            <th>Note</th>
+            <th>IsConfirmed</th>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClinicName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
 
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var appointment in Model.Appointments)
+        {
+            <tr>
+                <td>@appointment.AppointmentDate.ToShortDateString()</td>
+                <td>@appointment.StartTime.ToShortTimeString()</td>
+                <td>@appointment.Title</td>
+                <td>@appointment.FirstName</td>
+                <td>@appointment.LastName</td>
+                <td>@appointment.PhoneNumber</td>
+                <td>@appointment.Email</td>
+                <td>@appointment.Gender</td>
+                <td>@appointment.Birthday</td>
+                <td>@appointment.Note</td>
+                <td>@(appointment.IsConfirmed ? "Yes" : "No")</td>
+                <td>
+                    @Html.ActionLink("Details", "UserAppointmentDetails", "Appointments", new { id = appointment.AppointmentId }, null)
+                </td>
+
+
+            </tr>
+        }
+    </tbody>
 </table>
