--- a/FIT5032_Assignment/Views/Shared/EmialComponent.cshtml
+++ b/FIT5032_Assignment/Views/Shared/EmialComponent.cshtml
@@ -14,10 +14,10 @@
             <div class="alert alert-info">@ViewBag.Result</div>
         }
         <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "col-md-2" })
+            @Html.LabelFor(model => model.Emails, htmlAttributes: new { @class = "col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @id = "Useremail" })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.Emails, new { @class = "form-control", @style = "width: 800px;", @id = "Useremail" })
+                @Html.ValidationMessageFor(model => model.Emails, "", new { @class = "text-danger" })
             </div>
         </div>
         <br>
@@ -25,10 +25,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Subject, htmlAttributes: new { @class = "col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Subject, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Subject, new { htmlAttributes = new { @class = "form-control", @style = "width: 800px;" } })
                 @Html.ValidationMessageFor(model => model.Subject, "", new { @class = "text-danger" })
             </div>
         </div>
+
+
 
         <br>
         <div class="form-group">
@@ -54,3 +56,12 @@
 </div>
 
 
+<style>
+    .custom-label {
+        width: 150px;
+    }
+
+    .custom-input {
+        width: 350px;
+    }
+    </style>
