--- a/FIT5032_Assignment/Views/Appointments/Create.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Create.cshtml
@@ -9,7 +9,7 @@
 <h2>Booking Appointment</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Appointments", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     <hr />
@@ -172,8 +172,8 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @*<input type="text" id="birthdayPicker" class="form-control" placeholder="Please pick a date">*@
                         @Html.TextBoxFor(model => model.Birthday, "{0:yyyy-MM-dd}", new { @class = "form-control", id = "birthdayPicker", placeholder = "Please pick a date" })
+                        @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
 
                     </div>
                 </div>
