--- a/FIT5032_Assignment/Views/Clinics/PatientAppointmentDetails.cshtml
+++ b/FIT5032_Assignment/Views/Clinics/PatientAppointmentDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FIT5032_Assignment.Models.Entites.Appointment
 
 @{
-    ViewBag.Title = "UserAppointmentDetails";
+    ViewBag.Title = "PatientAppointmentDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -129,6 +129,21 @@
 
         <dd>
             @Html.DisplayFor(model => model.EndTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayName("Image")
+        </dt>
+
+        <dd>
+            @if (ViewBag.ImagePath != null && !string.IsNullOrWhiteSpace(ViewBag.ImagePath.ToString()))
+            {
+                <img class="img-thumbnail" src="@Url.Content("~/Uploads/" + ViewBag.ImagePath)" alt="@ViewBag.ImageName" />
+            }
+            else
+            {
+                <text>No image available</text>
+            }
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Note)
