--- a/FIT5032_Assignment/Views/Appointments/Delete.cshtml
+++ b/FIT5032_Assignment/Views/Appointments/Delete.cshtml
@@ -5,11 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete Appointment</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Appointment</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -105,7 +104,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsConfirmed)
+            @(Model.IsConfirmed ? "Yes" : "No")
         </dd>
 
         <dt>
@@ -132,13 +131,6 @@
             @Html.DisplayFor(model => model.EndTime)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
 
     </dl>
 
@@ -146,8 +138,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            @Html.ActionLink("Back to List", "Index","Clinics")
         </div>
     }
 </div>
